[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-trait = "0.1"
tokio = {version = "^1.10", features = ["net", "macros", "rt"]}
protocol = { path = "../protocol" }
thiserror = "1.0"
# typed-builder = "0.9"

