[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-trait = "0.1"
tokio = {version = "^1.10", features = ["net", "macros", "rt"]}
protocol = { path = "../protocol" }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"
async-recursion = "0.3"
rand = "0.8"
