[package]
name = "discovery"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8", features = ["small_rng"]}
tokio = {version = "1", features=["time", "net", "macros", "rt"]}
futures = "0.3"
dashmap = "4"
tracing = {git = "https://github.com/tokio-rs/tracing", rev = "1c73db2973b83e46c13f0ab426d80c442ebacc34" }
tracing-futures = {git = "https://github.com/tokio-rs/tracing", rev = "1c73db2973b83e46c13f0ab426d80c442ebacc34" }

[dev-dependencies]
mac_address = "1.1.2"
tracing-subscriber = {features = ["fmt", "ansi"], git = "https://github.com/tokio-rs/tracing", rev = "1c73db2973b83e46c13f0ab426d80c442ebacc34" }
