[package]
name = "meta-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client_protocol = { package = "protocol", path = "../protocol" }
structopt = "0.3"
futures = "0.3"
tokio = {version = "^1.10", features = ["net", "macros", "rt-multi-thread"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
serde = { version = "1", features = ["derive"] }

sled = "0.34"

thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.15"
opentelemetry = { version = "0.16", features = ["trace"] }
opentelemetry-jaeger = { version = "0.15", features = ["reqwest_collector_client"]}
# opentelemetry = { version = "0.16", features = ["rt-tokio", "trace"] }
# opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio", "reqwest_collector_client"] }
