[package]
name = "meta-server"
version = "0.1.0"
edition = "2018"

[dependencies]
client_protocol = { package = "protocol", path = "../protocol" }
structopt = "0.3"
futures = "0.3"
tokio = {version = "^1.10", features = ["sync", "time", "net", "macros", "rt-multi-thread"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
serde = { version = "1", features = ["derive"] }
mac_address = "1.1.2"

sled = "0.34"

mdns = "3.0"
futures-util = "0.3"

thiserror = "1"

tracing = {git = "https://github.com/tokio-rs/tracing" }
tracing-subscriber = {git = "https://github.com/tokio-rs/tracing" }
tracing-opentelemetry = {git = "https://github.com/tokio-rs/tracing" }
opentelemetry = { version = "0.16", features = ["trace"] }
opentelemetry-jaeger = { version = "0.15", features = ["reqwest_collector_client"]}
