[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
default-run = "benchmark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bench_client"


[dependencies]
instance-chart = { version = "0.2.1" }
serde = { version = "1", features = ["derive"] }
csv = "1.1"
bincode = "1"

tokio = { version = "^1.19.1", features = ["macros", "net", "time", "rt-multi-thread", "tracing", "sync", "process"] }
futures = "0.3"
async-trait = "0.1.56"

tracing = { version = "0.1" } #, features = ["release_max_level_error"] }
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "3.1", features = ["derive"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
itertools = "0.10"
thiserror = "1"
result-tools = { git = "https://github.com/dvdsk/result-tools.git" }

indicatif = "0.16.2"
users = "0.11"
gethostname = "0.2.3"
rand = "0.8.5"

client = { path = "../client" }
node = { path = "../node" }
mktemp = "0.4"
