[package]
name = "multicast-discovery"
version = "0.1.0"
edition = "2018"
authors = ["David Kleingeld"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
rand = {version = "0.8", features = ["small_rng"]}
tokio = {version = "1", features=["time", "net", "macros", "tracing"]}
dashmap = "5"
tracing = "0.1"
tracing-futures = "0.2"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
socket2 = "0.4"

[dev-dependencies]
mac_address = "1.1.2"
tracing-subscriber = {version = "0.3", features = ["fmt", "ansi", "env-filter"]}
tokio = {version = "1", features=["time", "net", "macros", "rt-multi-thread", "tracing"]}
console-subscriber = "0.1"
more-asserts = "0.2"
