[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# instance-chart = "0.1"
instance-chart = {git = "https://github.com/dvdsk/instance-chart" }

rand = "0.8"
num-traits = "0.2"

tokio = { version = "1.0", features = ["macros", "net", "time", "rt-multi-thread", "tracing"] }
futures = "0.3"

tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.17" }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
opentelemetry = { version = "0.17", features = ["rt-tokio"] }

clap = { version = "3.1", features = ["derive"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
thiserror = "1"
result-tools = { git = "https://github.com/dvdsk/result-tools.git" }

sled = "0.34"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }

protocol = { path = "../protocol" }

[dev-dependencies]
start-jeager = { path = "../start-jeager" }
socket2 = "0.4"
mktemp = "0.4"
