[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }

futures = "0.3"
tokio = {version = "^1.10", features = ["net", "macros", "rt-multi-thread"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
