[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
futures = "0.3"

tokio = { git = "https://github.com/tokio-rs/tokio", rev = "0d4d3c3", version = "1.0", features = ["macros", "net", "rt-multi-thread", "io-util"] }
tokio-util = { git = "https://github.com/tokio-rs/tokio", rev = "0d4d3c3", version = "0.7", features = ["codec"] }

tokio-serde = { version = "0.8", features = ["bincode"] }
