[package]
name = "start-jeager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls"] }
tracing = "0.1.3"
tokio = { git = "https://github.com/tokio-rs/tokio", features = ["macros", "process"], rev="0d4d3c3" }
flate2 = "1"
tar = "0.4"
psutil = "3"
fork = "0.1"

[dev-dependencies]
more-asserts = "0.2"
mktemp = "0.4"
