[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.19.1", features = ["macros", "net", "time", "rt-multi-thread", "tracing", "sync"] }
futures = "0.3"
client = { path = "../client" }
node = { path = "../node" }
start-jeager = { path = "../start-jeager" }
mktemp = "0.4"
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
clap = { version = "3.1", features = ["derive"] }

tracing = { version = "0.1" }
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.17" }
tracing-flame = "0.2"
console-subscriber = "0.1.6"
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
